--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-list/drink-list.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-list/drink-list.component.html
@@ -1,29 +1,50 @@
 <h4 class="text-center mt-3">Drink List</h4>
 <div class="row justify-content-center">
-    <a class="btn btn-primary btn-lg m-2" routerLink="/drinks/create">Create Drink</a>
-    <a class="btn btn-primary btn-lg m-2" routerLink="/">Back To Home</a>
+  <a class="btn btn-primary btn-lg m-2" routerLink="/drinks/create"
+    >Create Drink</a
+  >
+  <a class="btn btn-primary btn-lg m-2" routerLink="/">Back To Home</a>
 </div>
 <div *ngIf="drinks" class="mt-3">
-    <drink-filter (filterDrinks)="filterDrinks($event)"></drink-filter>
+  <drink-filter (filterDrinks)="filterDrinks($event)"></drink-filter>
 </div>
 <div class="container">
-    <div *ngIf="drinks" class="row justify-content-start mt-3">
-        <div *ngFor="let drink of filteredDrinks" class="col-lg-3 col-md-5 col-sm-7 m-2">
-            <div class="card text-center">
-                <img *ngIf="drink.photoPath != null" class="card-img-top image-limiter" [src]="drink.photoPath"
-                    alt="Loading picture...">
-                <img *ngIf="drink.photoPath == null" class="card-img-top image-limiter" src="assets/nodrinkimg.jpg"
-                    alt="Loading picture...">
-                <h5 class="card-header"><a [routerLink]="['/drinks', drink.id]">{{drink.name}}</a></h5>
-                <div class="card-body">
-                    <div class="row justify-content-center">
-                        <a class="btn btn-success m-2" (click)="editDrink(drink.id)">Edit</a>
-                        <button class="btn btn-danger m-2" (click)="deleteDrink(drink)">Delete</button>
-                    </div>
-                </div>
-            </div>
+  <div *ngIf="drinks" class="row justify-content-start mt-3">
+    <div
+      *ngFor="let drink of filteredDrinks"
+      class="col-lg-3 col-md-5 col-sm-7 m-2"
+    >
+      <div class="card text-center">
+        <img
+          *ngIf="drink.photoPath != null"
+          class="card-img-top image-limiter"
+          [src]="drink.photoPath"
+          alt="Loading picture..."
+        />
+        <img
+          *ngIf="drink.photoPath == null"
+          class="card-img-top image-limiter"
+          src="assets/nodrinkimg.jpg"
+          alt="Loading picture..."
+        />
+        <h5 class="card-header">
+          <a [routerLink]="['/drinks', drink.id]">{{ drink.name }}</a>
+        </h5>
+        <div class="card-body">
+          <div class="row justify-content-center">
+            <a class="btn btn-success m-2" (click)="editDrink(drink.id)"
+              >Edit</a
+            >
+            <button class="btn btn-danger m-2" (click)="deleteDrink(drink)">
+              Delete
+            </button>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
-<p *ngIf="drinks && drinks.length === 0" class="m-3 text-center">{{statusMessage}}</p>
-<p *ngIf="!drinks" class="m-3 text-center">{{statusMessage}}</p>
+<p *ngIf="drinks && drinks.length === 0" class="m-3 text-center">
+  {{ statusMessage }}
+</p>
+<p *ngIf="!drinks" class="m-3 text-center">{{ statusMessage }}</p>
