--- a/BartenderSupportSystem/Server/ClientApp/src/app/shared/image-input/image-input.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/shared/image-input/image-input.component.html
@@ -1,9 +1,15 @@
 <h6 class="text">Photo Path</h6>
 <div class="custom-file mt-3">
-    <input #imageInput type="file" accept="image/*" class="custom-file-input" id="customFile"
-        (change)="processFile(imageInput)">
-    <label class="custom-file-label" for="customFile">Choose file...</label>
+  <input
+    #imageInput
+    type="file"
+    accept="image/*"
+    class="custom-file-input"
+    id="customFile"
+    (change)="processFile(imageInput)"
+  />
+  <label class="custom-file-label" for="customFile">Choose file...</label>
 </div>
 <div class="mt-3" *ngIf="pictureUrl != null">
-    <img [src]="pictureUrl" class="image-limiter" />
+  <img [src]="pictureUrl" class="image-limiter" />
 </div>
