Custom test pass form POST method + validators.

--- a/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-pass-form/custom-test-pass-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-pass-form/custom-test-pass-form.component.html
@@ -25,6 +25,7 @@
           let question of testToPassForm.get('questions')['controls'];
           let i = index
         "
+        class="mt-3"
       >
         <div [formGroupName]="i">
           <hr *ngIf="i > 0" />
