CustomTestResult component, controller.

--- a/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-result/custom-test-result.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-result/custom-test-result.component.html
@@ -1,1 +1,29 @@
-<p>custom-test-result works!</p>
+<div
+  *ngIf="origin && result && currentUserIsPasser"
+  class="row justify-content-center mt-3"
+>
+  <div class="col">
+    <div class="card">
+      <div class="card-body row justify-content-center align-items-center">
+        <div class="col">
+          <h5 class="card-title">Name:</h5>
+          <h6 class="card-subtitle text-muted">{{ origin.name }}</h6>
+        </div>
+        <div class="col">
+          <h5 class="card-title">Topic:</h5>
+          <h6 class="card-subtitle text-muted">{{ origin.topic }}</h6>
+        </div>
+        <div class="col">
+          <h5 class="card-title">Your mark:</h5>
+          <h6 class="card-subtitle text-muted">
+            {{ result.personalMark }}/100
+          </h6>
+        </div>
+        <div class="col">
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
