Add test result details to CustomTestResult component.

--- a/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-result/custom-test-result.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-result/custom-test-result.component.html
@@ -20,10 +20,12 @@
           </h6>
         </div>
         <div class="col">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <h5>
+            <a href="#" class="card-link">Rate</a>
+          </h5>
         </div>
       </div>
     </div>
+    <custom-test-pass-form></custom-test-pass-form>
   </div>
 </div>
