--- a/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-pass-form/custom-test-pass-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-pass-form/custom-test-pass-form.component.html
@@ -1,19 +1,19 @@
 <div *ngIf="testToPass" class="mt-3">
-  <h4 class="text-center">Passing the Test</h4>
+  <h4 class="text-center">{{title}}</h4>
   <div class="col justify-content-start mt-2">
-    <div class="row align-items-center">
+    <div class="row align-items-center" *ngIf="!isViewResultsMode">
       <h6>Name:</h6>
       <p class="mt-2 ml-2 font-italic">{{ testToPass.name }}</p>
     </div>
-    <div class="row align-items-center">
+    <div class="row align-items-center" *ngIf="!isViewResultsMode">
       <h6>Topic:</h6>
       <p class="mt-2 ml-2 font-italic">{{ testToPass.topic }}</p>
     </div>
-    <div class="row align-items-center">
+    <div class="row align-items-center" *ngIf="!isViewResultsMode">
       <h6>Author:</h6>
       <p class="mt-2 ml-2 font-italic">{{ testToPass.authorUsername }}</p>
     </div>
-    <div class="row align-items-center">
+    <div class="row align-items-center" *ngIf="!isViewResultsMode">
       <h6>Description:</h6>
       <p class="mt-2 ml-2 font-italic">{{ testToPass.description }}</p>
     </div>
@@ -29,13 +29,21 @@
       >
         <div [formGroupName]="i">
           <hr *ngIf="i > 0" />
-          <input
-            type="hidden"
-            [id]="'questionId' + i"
-            formControlName="questionId"
-            [value]="question.get('questionId').value"
-          />
-          <h4>{{ i + 1 }}. {{ question.get("questionStatement").value }}</h4>
+
+          <div class="row">
+            <h4>{{ i + 1 }}. {{ question.get("questionStatement").value }}</h4>
+            <h4
+              class="text-danger ml-2"
+              *ngIf="
+                incorrectAnsweredQuestionIds &&
+                incorrectAnsweredQuestionIds.includes(
+                  question.get('questionId').value
+                )
+              "
+            >
+              - Incorrect
+            </h4>
+          </div>
 
           <div
             formArrayName="answers"
@@ -80,6 +88,7 @@
       <div class="mt-3">
         <button
           type="submit"
+          *ngIf="!isViewResultsMode"
           [disabled]="testToPassForm.invalid"
           class="btn btn-primary"
         >
@@ -88,5 +97,4 @@
       </div>
     </form>
   </div>
-  <p>{{ testToPassForm.value | json }}</p>
 </div>
