--- a/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-pass-form/custom-test-pass-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-pass-form/custom-test-pass-form.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="testToPass" class="mt-3">
-  <h4 class="text-center">{{title}}</h4>
+  <h4 class="text-center">{{ title }}</h4>
   <div class="col justify-content-start mt-2">
     <div class="row align-items-center" *ngIf="!isViewResultsMode">
       <h6>Name:</h6>
@@ -73,7 +73,7 @@
                           answer.get('answerIsCorrect').touched
                       }"
                       class="form-check-input"
-                      [id]="'answerStatement' + j"
+                      [id]="'answerStatement' + i.toString() + j.toString()"
                       formControlName="answerIsCorrect"
                       placeholder="Enter statement"
                       style="width: 20px; height: 20px"
