--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-filter/drink-filter.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-filter/drink-filter.component.html
@@ -112,8 +112,9 @@
           />
         </div>
 
-        <div class="form-check-inline">
+        <div class="form-check-inline mt-4">
           <input
+            style="width: 20px; height: 20px"
             class="form-check-input"
             type="checkbox"
             [value]="isNonAlcohol"
