--- a/BartenderSupportSystem/Server/ClientApp/src/app/home/home.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/home/home.component.html
@@ -1,23 +1,45 @@
 <div class="col mt-3" *ngIf="isAuthenticated">
-    <div class="jumbotron-fluid">
-        <h1 class="display-4">Help System</h1>
-        <p class="lead">A great filter system that helps to find appropriate alcohol based on client needs.</p>
-        <hr class="my-4">
-        <p>Available Lists:</p>
-        <div class="col">
-            <a class="btn btn-primary col-sm-2 m-2" routerLink="/brands" role="button">Brands</a>
-            <a class="btn btn-primary col-sm-2 m-2" routerLink="/drinks" role="button">Drinks</a>
-            <a class="btn btn-primary col-sm-2 m-2" routerLink="/meals" role="button">Meals</a>
-            <a class="btn btn-primary col-sm-2 m-2" routerLink="/cocktails" role="button">Cocktails</a>
-        </div>
+  <div class="jumbotron-fluid">
+    <h1 class="display-4">Help System</h1>
+    <p class="lead">
+      A great filter system that helps to find appropriate alcohol based on
+      client needs.
+    </p>
+    <hr class="my-4" />
+    <p>Available Lists:</p>
+    <div class="col">
+      <a class="btn btn-primary col-sm-2 m-2" routerLink="/brands" role="button"
+        >Brands</a
+      >
+      <a class="btn btn-primary col-sm-2 m-2" routerLink="/drinks" role="button"
+        >Drinks</a
+      >
+      <a class="btn btn-primary col-sm-2 m-2" routerLink="/meals" role="button"
+        >Meals</a
+      >
+      <a
+        class="btn btn-primary col-sm-2 m-2"
+        routerLink="/cocktails"
+        role="button"
+        >Cocktails</a
+      >
     </div>
-    <div class="jumbotron-fluid mt-4">
-        <h1 class="display-4">Test System</h1>
-        <p class="lead">Tests from bartenders for bartenders.</p>
-        <hr class="my-4">
-        <p>Available Lists:</p>
-        <div class="col">
-            <a class="btn btn-primary col-sm-2 m-2" routerLink="/tests" role="button">Tests</a>
-        </div>
+  </div>
+  <div class="jumbotron-fluid mt-4">
+    <h1 class="display-4">Test System</h1>
+    <p class="lead">Tests from bartenders for bartenders.</p>
+    <hr class="my-4" />
+    <p>Available Lists:</p>
+    <div class="col">
+      <a class="btn btn-primary col-sm-2 m-2" routerLink="/tests" role="button"
+        >Tests</a
+      >
+      <a
+        class="btn btn-primary col-sm-2 m-2"
+        routerLink="/tests/results"
+        role="button"
+        >Passed Tests</a
+      >
     </div>
+  </div>
 </div>
