--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/brands/brand-list/brand-list.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/brands/brand-list/brand-list.component.html
@@ -1,6 +1,9 @@
 <h4 class="text-center mt-3">Brand List</h4>
 <div class="row justify-content-center">
-  <a class="btn btn-primary btn-lg m-2" routerLink="/brands/create"
+  <a
+    class="btn btn-primary btn-lg m-2"
+    routerLink="/brands/create"
+    *ngIf="isAdmin"
     >Create Brand</a
   >
   <a class="btn btn-primary btn-lg m-2" routerLink="/">Back To Home</a>
@@ -17,10 +20,10 @@
       <tr *ngFor="let brand of brands">
         <td>{{ brand.name }}</td>
         <td>{{ brand.countryOfOrigin }}</td>
-        <td>
+        <td *ngIf="isAdmin">
           <a class="btn btn-success" (click)="editBrand(brand.id)">Edit</a>
         </td>
-        <td>
+        <td *ngIf="isAdmin">
           <button class="btn btn-danger" (click)="deleteBrand(brand)">
             Delete
           </button>
