--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-form/drink-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-form/drink-form.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="brands" class="mt-3">
+<div *ngIf="brands && isAdmin" class="mt-3">
   <h4 class="text-center">Drink Form</h4>
   <div class="row justify-content-center">
     <form [formGroup]="drinkForm" (ngSubmit)="onSubmit()">
