--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/meals/meal-form/meal-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/meals/meal-form/meal-form.component.html
@@ -1,5 +1,5 @@
-<h4 class="text-center mt-3">Meal Form</h4>
-<div class="row justify-content-center">
+<h4 class="text-center mt-3" *ngIf="isAdmin">Meal Form</h4>
+<div class="row justify-content-center" *ngIf="isAdmin">
   <form [formGroup]="mealForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Name</label>
