--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/meals/meal-list/meal-list.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/meals/meal-list/meal-list.component.html
@@ -1,6 +1,9 @@
 <h4 class="text-center mt-3">Meal List</h4>
 <div class="row justify-content-center">
-  <a class="btn btn-primary btn-lg m-2" routerLink="/meals/create"
+  <a
+    class="btn btn-primary btn-lg m-2"
+    routerLink="/meals/create"
+    *ngIf="isAdmin"
     >Create Meal</a
   >
   <a class="btn btn-primary btn-lg m-2" routerLink="/">Back To Home</a>
@@ -17,8 +20,10 @@
       <tr *ngFor="let meal of meals">
         <td>{{ meal.name }}</td>
         <td>{{ meal.pricePerGr }}</td>
-        <td><a class="btn btn-success" (click)="editMeal(meal.id)">Edit</a></td>
-        <td>
+        <td *ngIf="isAdmin">
+          <a class="btn btn-success" (click)="editMeal(meal.id)">Edit</a>
+        </td>
+        <td *ngIf="isAdmin">
           <button class="btn btn-danger" (click)="deleteMeal(meal)">
             Delete
           </button>
