--- a/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-result-list/custom-test-result-list.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-result-list/custom-test-result-list.component.html
@@ -1,8 +1,9 @@
-<h4 class="text-center mt-3">Test List</h4>
+<h4 class="text-center mt-3">Passed Tests</h4>
 <div class="row justify-content-center">
   <a class="btn btn-primary btn-lg m-2" routerLink="/tests/create"
     >Create Test</a
   >
+  <a class="btn btn-primary btn-lg m-2" routerLink="/tests">Back To List</a>
   <a class="btn btn-primary btn-lg m-2" routerLink="/">Back To Home</a>
 </div>
 <div *ngIf="tests" class="mt-3">
@@ -15,7 +16,7 @@
         <h5 class="card-title">{{ test.name }}</h5>
         <h6 class="card-subtitle mb-2 text-muted">{{ test.topic }}</h6>
         <p class="card-text">{{ test.description }}</p>
-        <a [routerLink]="['/tests/pass', test.id]" class="card-link">Pass</a>
+        <a [routerLink]="['/tests', test.id]" class="card-link">View</a>
         <a
           [routerLink]="['/tests/edit', test.id]"
           class="card-link"
