Hotfix: add validations when editing the test.

--- a/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-form/custom-test-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-form/custom-test-form.component.html
@@ -202,7 +202,7 @@
                     class="invalid-feedback"
                     *ngIf="answer.get('answerStatement').errors?.minlength"
                   >
-                    Statement must be at least 2 chars long.
+                    Statement must be at least 1 char long.
                   </div>
                   <div
                     class="invalid-feedback"
